Tagit bort kommentarer

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,9 @@
         content="IE=edge" />
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0" />
+
   <script src="https://cdn.tailwindcss.com"></script>
+
   <link rel="shortcut icon"
         href="data:image/x-icon;"
         type="image/x-icon" />
@@ -40,7 +42,7 @@
             <input type="text"
                    id="title"
                    name="title"
-                   class="w-full rounded-md border-yellow-500 border-2 focus-within:outline-none focus:border-yellow-600 px-4 py-2" />
+                   class="w-full rounded-md border-2 focus-within:outline-none focus:border-yellow-600 px-4 py-2" />
           </section>
           <!-- Följande sektioner är likadana för övriga fält i formuläret; description och dueDate -->
           <section class="mb-2">
@@ -53,7 +55,7 @@
                       rows="5"
                       id="description"
                       name="description"
-                      class="resize-none w-full rounded-md border-yellow-500 border-2 focus-within:outline-none focus:border-yellow-600 px-4 py-2"></textarea>
+                      class="resize-none w-full rounded-md border-2 focus-within:outline-none focus:border-yellow-600 px-4 py-2"></textarea>
           </section>
           <section class="mb-2">
             <label class="block pr-5 mb-2 text-xl"
@@ -70,7 +72,7 @@
           <button name="submitTodoForm"
                   class="rounded-md bg-yellow-500 hover:bg-yellow-400 px-4 py-1"
                   type="submit">
-            Spara
+            Lägg till
           </button>
         </form>
       </section>
