--- a/client/index.html
+++ b/client/index.html
@@ -18,14 +18,15 @@
 
 <body>
   <main id="root"
-        class="pt-24 bg-gradient-to-br from-purple-500 to-yellow-400 min-h-screen">
-    <h1 class="text-center mb-10 text-7xl text-purple-900">Todo-lista</h1>
+        class="pt-24 bg-slate-200 min-h-screen">
+    <h1 class="text-center mb-10 text-6xl text-slate-700">Att göra lista</h1>
     <!-- Sektion som gör att formuläret och listan kommer att hamna bredvid varandra. -->
-    <section class="flex gap-10 w-full xl:w-4/5 mx-2 xl:mx-auto bg-white bg-opacity-75 p-5 rounded-lg">
+    <section class="flex gap-10 w-full xl:w-4/5 mx-2 xl:mx-auto bg-white p-5 rounded-lg">
       <!-- Sektion för formuläret -->
       <section class="flex-1">
-        <h2 class="mb-6 text-3xl text-orange-900">Lägg till en uppgift</h2>
+        <h2 class="mb-6 text-3xl text-slate-700">Lägg till en uppgift</h2>
 
+      
 
 
   <!-------------------------------------------TO DO FORM------------------------------------------------------------------------->
@@ -35,42 +36,42 @@
             <label class="block pr-5 mb-2 text-xl"
                    for="title">Titel</label>
             <!-- Detta p-element är dolt från början med hjälp av tailwinds klass "hidden". Det kommer sedan att visas vid valideringsfel. -->
-            <p class="message text-sm text-red-700 mb-2 hidden">
+            <p class="message text-sm text-gray-800 mb-2 hidden">
               Error message
             </p>
             <input type="text"
                    id="title"
                    name="title"
-                   class="w-full rounded-md border-2 focus-within:outline-none focus:border-yellow-600 px-4 py-2" />
+                   class="w-full rounded-md border-slate-300 border-2 focus-within:outline-none focus:border-pink-500 px-4 py-2 text-pink-500" />
           </section>
 
           <section class="mb-2">
             <label class="block pr-5 mb-2 text-xl"
                    for="description">Beskrivning</label>
-            <p class="message text-sm text-red-700 mb-2 hidden">
+            <p class="message text-sm text-gray-800 mb-2 hidden">
               Error message
             </p>
             <textarea maxlength="500"
                       rows="5"
                       id="description"
                       name="description"
-                      class="resize-none w-full rounded-md border-2 focus-within:outline-none focus:border-yellow-600 px-4 py-2"></textarea>
+                      class="resize-none w-full border-slate-300 rounded-md border-2 focus-within:outline-none focus:border-pink-500 px-4 py-2 text-pink-500"></textarea>
           </section>
           <section class="mb-2">
             <label class="block pr-5 mb-2 text-xl"
                    for="title">Utförd senast</label>
-            <p class="message text-sm text-red-700 mb-2 hidden">
+            <p class="message text-sm text-gray-800 mb-2 hidden">
               Error message
             </p>
             <input type="date"
                    id="dueDate"
                    name="dueDate"
-                   class="w-full rounded-md border-yellow-500 border-2 focus-within:outline-none focus:border-yellow-600 px-4 py-2" />
+                   class="w-full rounded-md border-slate-300 border-2 focus-within:outline-none focus:border-pink-500 px-4 py-2 text-pink-500" />
           </section>
 
           <!-- Knappen är av typen submit för att den ska vara knuten till formulärets submit-event.  -->
           <button name="submitTodoForm"
-                  class="rounded-md bg-yellow-500 hover:bg-yellow-400 px-4 py-1"
+                  class="rounded-md bg-sky-500 text-white font-semibold hover:bg-sky-700 px-4 py-1"
                   type="submit">
             Lägg till
           </button>
@@ -82,7 +83,7 @@
 <!----------------------------------------------TO DO LISTAN------------------------------------------------------------->
       </section>
       <section class="flex-1 px-5">
-        <h2 class="mb-6 text-3xl text-orange-900">Alla uppgifter</h2>
+        <h2 class="mb-6 text-3xl text-slate-700">Alla uppgifter</h2>
         <ul id="todoList">
           <!-- Allt innanför här ska skapas dynamiskt med JavaScript, så se till att inget list-element läggs till här i denna HTML-fil.  -->
         </ul>
