Lagt till styling

--- a/client/index.html
+++ b/client/index.html
@@ -19,15 +19,15 @@
 <body>
   <main id="root"
         class="pt-24 bg-slate-200 min-h-screen">
-    <h1 class="text-center mb-10 text-6xl text-slate-700">Att göra lista</h1>
+    <h1 class="text-center mb-10 text-6xl text-slate-700 font-mono">ATT GÖRA LISTA</h1>
     <!-- Sektion som gör att formuläret och listan kommer att hamna bredvid varandra. -->
-    <section class="flex gap-10 w-full xl:w-4/5 mx-2 xl:mx-auto bg-white p-5 rounded-lg">
+    <section class="flex gap-10 w-full xl:w-4/5 mx-2 xl:mx-auto bg-white shadow-lg p-5 rounded-lg">
       <!-- Sektion för formuläret -->
       <section class="flex-1">
-        <h2 class="mb-6 text-3xl text-slate-700">Lägg till en uppgift</h2>
+        <h2 class="mb-6 text-3xl text-slate-700 ">Lägg till en uppgift</h2>
+
 
       
-
 
   <!-------------------------------------------TO DO FORM------------------------------------------------------------------------->
         <form id="todoForm"
@@ -55,7 +55,7 @@
                       rows="5"
                       id="description"
                       name="description"
-                      class="resize-none w-full border-slate-300 rounded-md border-2 focus-within:outline-none focus:border-pink-500 px-4 py-2 text-pink-500"></textarea>
+                      class="resize-none w-full border-slate-300 rounded-md border-2 focus-within:outline-none focus:border-pink-500 px-4 py-2 text-pink-500 "></textarea>
           </section>
           <section class="mb-2">
             <label class="block pr-5 mb-2 text-xl"
